Revert unintended changes.

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -361,7 +361,7 @@ a:focus, a:hover, a:active {
 }
 
 .text-secondary {
-  color: #2DE8C8 !important;
+  color: #2C3E50 !important;
 }
 
 .btn-primary {
