Updated animated background to full length of webpage

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -508,8 +508,8 @@
 	float:left;
 	clear:both;
 	padding-top:70px;
-	padding-bottom:60px;
-	height:845px;
+	padding-bottom:120px;
+	/*height:845px;*/
 	background-color:#8b8b8b;
 }
 }
