--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -311,8 +311,8 @@ border:#000 solid 2px;
 	float:left;
 	clear:both;
 	padding-top:90px;
-	padding-bottom:60px;
-	height:845px;
+	padding-bottom:150px;
+	/*height:845px;*/
 }
 .heading
 {
